modificacion de mantenimiento

--- a/web/Mantenimiento/Turno.xhtml
+++ b/web/Mantenimiento/Turno.xhtml
@@ -113,50 +113,28 @@
         </div>
       </div>
 
-      <div class="container-fluid"  style="margin: 50px 0;">
-        <div class="row">
-          <div class="col-xs-12 col-sm-4 col-md-3">
-            <img src="../resources/imgs/imagenes_mantenimiento/builder.png" alt="user" class="img-responsive center-box" style="max-width: 110px;"/>
-          </div>
-          <div class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
-            Bienvenido a la sección mantenimiento de turnos
-          </div>
-        </div>
-      </div>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-xs-12 lead">
-            <ol class="breadcrumb">
-              <li class="active">Regitro Turnos</li>
-              <li><a href="listaTurno.xhtml">Listado de Turnos</a></li>
-            </ol>
-          </div>
-        </div>
-      </div>
-
   
-
-      <div class="container-fluid">
-        <div class="container-flat-form">
-          <div class="title-flat-form title-flat-blue">Busqueda de turno</div>
-          <form autocomplete="off">
-            <div class="row">
-              <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-                <h:form>
-                  <div class="group-material">
-                    <b:inputText id="id"  style=" font: bold small-caps 120%/200% serif;" placeholder="Consulta: "  value="#{bean_turno.turno.idturno}" />
-                  </div>
-                  <p class="text-center">
-                    <b:commandButton class="btn btn-primary" value="Buscar" action="#{bean_turno.buscar()}" />
-                  </p> 
-                </h:form>
-              </div>
+  <div class="container-fluid"  style="margin: 50px 0;">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-4 col-md-3">
+                        <img src="../resources/imgs/imagenes_mantenimiento/builder.png" alt="user" class="img-responsive center-box" style="max-width: 110px;"/>
+                    </div>
+                    <div class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
+                        Bienvenido a la sección mantenimiento de turnos
+                    </div>
+                </div>
             </div>
-          </form>
-        </div>
-      </div>
-
-
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-12 lead">
+                        <ol class="breadcrumb">
+                            <li class="active">Regitro de turnos</li>
+                            <li><a href="listaTurno.xhtml">Listado de turnos</a></li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+      
       <div class="container-fluid">
         <div class="container-flat-form">
           <div class="title-flat-form title-flat-blue">Registrar una nuevo Turno</div>
