--- a/web/Mantenimiento/listaOcupacion.xhtml
+++ b/web/Mantenimiento/listaOcupacion.xhtml
@@ -165,7 +165,7 @@
               <b:dataTableColumn class="div-table-cell" value="#{men.nombre}" label="Nombre"/>
               
               <b:dataTableColumn class="div-table-cell" label="Modificar">
-                <p:commandButton value="Modificar"  actionListener="#{bean_ocupacion.buscar2(men)}"  oncomplete="PF('dlg1').show()" icon="ui-icon-refresh" class="btn btn-info tooltips-general" title="Modificar medicamento" />
+                <p:commandButton value="Modificar"  actionListener="#{bean_ocupacion.buscar2(men)}"  oncomplete="PF('dlg1').show()" icon="ui-icon-refresh" class="btn btn-info tooltips-general" title="Modificar medicamento"  update=":dlg1"/>
               </b:dataTableColumn>
 
             </b:dataTable>
