--- a/web/Mantenimiento/listaReligion.xhtml
+++ b/web/Mantenimiento/listaReligion.xhtml
@@ -164,7 +164,7 @@
               <b:dataTableColumn class="div-table-cell" value="#{men.idReligion}" label="Id"/>
               <b:dataTableColumn class="div-table-cell" value="#{men.nombre}" label="nombre"/>
               <b:dataTableColumn class="div-table-cell" label="Modificar">
-                <p:commandButton value="Modificar"  actionListener="#{bean_religion.buscar2(men)}"  oncomplete="PF('dlg1').show()" icon="ui-icon-refresh" class="btn btn-info tooltips-general" title="Modificar medicamento" />
+                <p:commandButton value="Modificar"  actionListener="#{bean_religion.buscar2(men)}"  oncomplete="PF('dlg1').show()" icon="ui-icon-refresh" class="btn btn-info tooltips-general" title="Modificar medicamento"  update=":dlg1"/>
               </b:dataTableColumn>
 
             </b:dataTable>
