--- a/web/homes/homeMantenimiento.xhtml
+++ b/web/homes/homeMantenimiento.xhtml
@@ -77,17 +77,17 @@
                         <c:if test="#{controlador.Validador() == 5}">
                             <li><a href="homeMantenimiento.xhtml" style="font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio </a></li>
                         </c:if>
-                        <li><a href="../Mantenimiento/medicamento.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-caret-up-circle"></i>&nbsp;&nbsp; Medicamento </a></li>
+                        <li><a href="../Mantenimiento/medicamento.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-close-circle zmdi-hc-fw"></i>&nbsp;&nbsp; Medicamento </a></li>
 
-                        <li><a href="../Mantenimiento/Examen.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes </a></li>
+                        <li><a href="../Mantenimiento/Examen.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-developer-board zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes </a></li>
 
-                        <li><a href="../Mantenimiento/Ocupacion.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Ocupacion </a></li>
+                        <li><a href="../Mantenimiento/Ocupacion.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-file-plus zmdi-hc-fw"></i>&nbsp;&nbsp; Ocupacion </a></li>
 
-                        <li><a href="../Mantenimiento/Religion.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Religion </a></li>
+                        <li><a href="../Mantenimiento/Religion.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-loupe zmdi-hc-fw"></i>&nbsp;&nbsp; Religion </a></li>
 
-                        <li><a href="../Mantenimiento/Enfermedad.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad </a></li>
+                        <li><a href="../Mantenimiento/Enfermedad.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-adb zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad </a></li>
 
-                        <li><a href="../Mantenimiento/Turno.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Turno </a></li>
+                        <li><a href="../Mantenimiento/Turno.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-assignment zmdi-hc-fw"></i>&nbsp;&nbsp; Turno </a></li>
 
 
 
