--- a/web/Mantenimiento/Religion.xhtml
+++ b/web/Mantenimiento/Religion.xhtml
@@ -63,18 +63,17 @@
 
             <li><a href="../homes/homeMantenimiento.xhtml"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
 
-            <li><a href="medicamento.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Medicamento </a></li>
+            <li><a href="medicamento.xhtml" ><i class="zmdi zmdi-close-circle zmdi-hc-fw"></i>&nbsp;&nbsp; Medicamento </a></li>
 
-            <li><a href="Examen.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes </a></li>
+            <li><a href="Examen.xhtml" ><i class="zmdi zmdi-developer-board zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes </a></li>
 
-            <li><a href="Ocupacion.xhtml"  ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Ocupacion </a></li>
+            <li><a href="Ocupacion.xhtml"  ><i class="zmdi zmdi-file-plus zmdi-hc-fw"></i>&nbsp;&nbsp; Ocupacion </a></li>
 
-            <li><a href="Religion.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Religion </a></li>
+            <li><a href="Religion.xhtml" ><i class="zmdi zmdi-loupe zmdi-hc-fw"></i>&nbsp;&nbsp; Religion </a></li>
 
-            <li><a href="Enfermedad.xhtml"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad </a></li>
+            <li><a href="Enfermedad.xhtml"><i class="zmdi zmdi-adb zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad </a></li>
 
-            <li><a href="Turno.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Turno </a></li>
-            
+            <li><a href="Turno.xhtml" ><i class="zmdi zmdi-assignment zmdi-hc-fw"></i>&nbsp;&nbsp; Turno </a></li>
 
           </ul>
         </div>
@@ -135,9 +134,9 @@
         </div>
       </div>
 
-  
 
-      
+
+
       <div class="container-fluid">
         <div class="container-flat-form">
           <div class="title-flat-form title-flat-blue">Registrar una religion</div>
