--- a/web/Mantenimiento/Turno.xhtml
+++ b/web/Mantenimiento/Turno.xhtml
@@ -63,18 +63,18 @@
 
             <li><a href="../homes/homeMantenimiento.xhtml"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
 
-            <li><a href="medicamento.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Medicamento </a></li>
+            <li><a href="medicamento.xhtml" ><i class="zmdi zmdi-close-circle zmdi-hc-fw"></i>&nbsp;&nbsp; Medicamento </a></li>
 
-            <li><a href="Examen.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes </a></li>
+            <li><a href="Examen.xhtml" ><i class="zmdi zmdi-developer-board zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes </a></li>
 
-            <li><a href="Ocupacion.xhtml"  ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Ocupacion </a></li>
+            <li><a href="Ocupacion.xhtml"  ><i class="zmdi zmdi-file-plus zmdi-hc-fw"></i>&nbsp;&nbsp; Ocupacion </a></li>
 
-            <li><a href="Religion.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Religion </a></li>
+            <li><a href="Religion.xhtml" ><i class="zmdi zmdi-loupe zmdi-hc-fw"></i>&nbsp;&nbsp; Religion </a></li>
 
-            <li><a href="Enfermedad.xhtml"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad </a></li>
+            <li><a href="Enfermedad.xhtml"><i class="zmdi zmdi-adb zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad </a></li>
 
-            <li><a href="Turno.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Turno </a></li>
-            
+            <li><a href="Turno.xhtml" ><i class="zmdi zmdi-assignment zmdi-hc-fw"></i>&nbsp;&nbsp; Turno </a></li>
+
           </ul>
         </div>
         <!-- fin Opciones de Menu laterales -->
@@ -113,28 +113,28 @@
         </div>
       </div>
 
-  
-  <div class="container-fluid"  style="margin: 50px 0;">
-                <div class="row">
-                    <div class="col-xs-12 col-sm-4 col-md-3">
-                        <img src="../resources/imgs/imagenes_mantenimiento/builder.png" alt="user" class="img-responsive center-box" style="max-width: 110px;"/>
-                    </div>
-                    <div class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
-                        Bienvenido a la sección mantenimiento de turnos
-                    </div>
-                </div>
-            </div>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-xs-12 lead">
-                        <ol class="breadcrumb">
-                            <li class="active">Regitro de turnos</li>
-                            <li><a href="listaTurno.xhtml">Listado de turnos</a></li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-      
+
+      <div class="container-fluid"  style="margin: 50px 0;">
+        <div class="row">
+          <div class="col-xs-12 col-sm-4 col-md-3">
+            <img src="../resources/imgs/imagenes_mantenimiento/builder.png" alt="user" class="img-responsive center-box" style="max-width: 110px;"/>
+          </div>
+          <div class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
+            Bienvenido a la sección mantenimiento de turnos
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-12 lead">
+            <ol class="breadcrumb">
+              <li class="active">Regitro de turnos</li>
+              <li><a href="listaTurno.xhtml">Listado de turnos</a></li>
+            </ol>
+          </div>
+        </div>
+      </div>
+
       <div class="container-fluid">
         <div class="container-flat-form">
           <div class="title-flat-form title-flat-blue">Registrar una nuevo Turno</div>
