--- a/web/Mantenimiento/listaReligion.xhtml
+++ b/web/Mantenimiento/listaReligion.xhtml
@@ -40,7 +40,7 @@
   </h:head>
   <h:body>
 
-    
+
 
     <!-- Esta pagina es la inicial de control de registro de empleados -->
 
@@ -68,18 +68,18 @@
 
             <!-- Menu lateral-->
             <li><a href="../homes/homeMantenimiento.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio</a></li>
-            
-            <li><a href="medicamento.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Medicamento </a></li>
 
-            <li><a href="Examen.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes </a></li>
+            <li><a href="medicamento.xhtml" ><i class="zmdi zmdi-close-circle zmdi-hc-fw"></i>&nbsp;&nbsp; Medicamento </a></li>
 
-            <li><a href="Ocupacion.xhtml"  ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Ocupacion </a></li>
+            <li><a href="Examen.xhtml" ><i class="zmdi zmdi-developer-board zmdi-hc-fw"></i>&nbsp;&nbsp; Examenes </a></li>
 
-            <li><a href="Religion.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Religion </a></li>
+            <li><a href="Ocupacion.xhtml"  ><i class="zmdi zmdi-file-plus zmdi-hc-fw"></i>&nbsp;&nbsp; Ocupacion </a></li>
 
-            <li><a href="Enfermedad.xhtml"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad </a></li>
+            <li><a href="Religion.xhtml" ><i class="zmdi zmdi-loupe zmdi-hc-fw"></i>&nbsp;&nbsp; Religion </a></li>
 
-            <li><a href="Turno.xhtml" ><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Turno </a></li><!-- FIn del Menu lateral -->
+            <li><a href="Enfermedad.xhtml"><i class="zmdi zmdi-adb zmdi-hc-fw"></i>&nbsp;&nbsp; Enfermedad </a></li>
+
+            <li><a href="Turno.xhtml" ><i class="zmdi zmdi-assignment zmdi-hc-fw"></i>&nbsp;&nbsp; Turno </a></li>
           </ul>
         </div>
       </div>
@@ -129,7 +129,7 @@
             <img src="../resources/imgs/imagenes_mantenimiento/builder.png" alt="user" class="img-responsive center-box" style="max-width: 110px;"/>
           </div>
           <div class="col-xs-12 col-sm-8 col-md-8 text-justify lead" style=" font: bold small-caps 120%/200% serif;">
-             Bienvenido a la seccion de registro del listado de Religion.
+            Bienvenido a la seccion de registro del listado de Religion.
           </div>
         </div>
       </div>
