--- a/web/Equipo.xhtml
+++ b/web/Equipo.xhtml
@@ -164,7 +164,7 @@
         <div class="col-6">
           <div class="card bg-dark" style="width: 50rem; height: 25rem;">
             <div class="card-body">
-              <h1 class="card-title text-white">Laboratirio</h1>
+              <h1 class="card-title text-white">Laboratorio</h1>
 
               <h4 class="card-text text-white">cuenta con servicios de laboratorio clínico especializado
                 con servicio las 24 horas del día atendiendo una 
