--- a/web/Valores.xhtml
+++ b/web/Valores.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <head>
-        <title>Facelet Title</title>
+        <title>valores</title>
         <style>
             body {
                 background: url(resourcesFronted/img/dos.png);
@@ -43,7 +43,7 @@
 
         <!--=============Menu principal==================-->
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="faces/index.xhtml">Inicion</a>
+            <a class="navbar-brand" href="faces/index.xhtml">Inicio</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
