modificacion de fronter

--- a/web/Enfermera/ModificarHistorialClinico.xhtml
+++ b/web/Enfermera/ModificarHistorialClinico.xhtml
@@ -48,7 +48,7 @@
             <div class="full-reset container-menu-movile custom-scroll-containers">
                 <div class="logo full-reset all-tittles">
                     <i class="visible-xs zmdi zmdi-close pull-left mobile-menu-button" style="line-height: 55px; cursor: pointer; padding: 0 10px; margin-left: 7px;"></i> 
-                    sistema bibliotecario
+                    Sistema Clinica Medica
                 </div>
                 <div class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;">
                     <c:if test="#{controlador.Validador() == 1}">
