--- a/web/Secretaria/Busqueda.xhtml
+++ b/web/Secretaria/Busqueda.xhtml
@@ -86,6 +86,7 @@
                             <li><a href="../homes/homeSecretaria.xhtml" style="font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw"></i>&nbsp;&nbsp; Inicio </a></li>
                         </c:if>
 
+                      <li style="font: bold small-caps 120%/200% serif;"><h:link outcome="Secretaria/Paciente.xhtml" value="Nuevo paciente"><i class="zmdi zmdi-archive zmdi-hc-fw"></h:link></i></li>
                         <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Secretaria/Paciente.xhtml"><i class="zmdi zmdi-archive zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo paciente</a></li>
                         <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Secretaria/Calendario.xhtml"><i class="zmdi zmdi-lamp zmdi-hc-fw"></i>&nbsp;&nbsp; Calendario</a></li>
                         <li style="font: bold small-caps 120%/200% serif;"><a href="../faces/Secretaria/Busqueda.xhtml"><i class="zmdi zmdi-search  zmdi-hc-fw"></i>&nbsp;&nbsp; Buscar Paciente</a></li>
