--- a/web/Doctor/IngresoEnfermedad.xhtml
+++ b/web/Doctor/IngresoEnfermedad.xhtml
@@ -7,7 +7,7 @@
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
 
-        <title>Historiales Clinicos</title> 
+        <title>Registro Enfermedad</title> 
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="Shortcut Icon" type="image/x-icon" href="../resources/assets/icons/book.ico" />
@@ -38,7 +38,7 @@
             <div class="full-reset container-menu-movile custom-scroll-containers">
                 <div class="logo full-reset all-tittles">
                     <i class="visible-xs zmdi zmdi-close pull-left mobile-menu-button" style="line-height: 55px; cursor: pointer; padding: 0 10px; margin-left: 7px;"></i> 
-                    Doctor
+                    Sistema Clinica Medica
                 </div>
                 <div class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;">
                     <c:if test="#{controlador.Validador() == 1}">
