--- a/web/Doctor/ModificarCita.xhtml
+++ b/web/Doctor/ModificarCita.xhtml
@@ -8,7 +8,7 @@
 
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
-        <title>Lista de Documento</title>
+        <title>Modificar Citas</title>
 
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -40,7 +40,7 @@
             <div class="full-reset container-menu-movile custom-scroll-containers">
                 <div class="logo full-reset all-tittles">
                     <i class="visible-xs zmdi zmdi-close pull-left mobile-menu-button" style="line-height: 55px; cursor: pointer; padding: 0 10px; margin-left: 7px;"></i> 
-                    sistema bibliotecario
+                    Sistema Clinica Medico
                 </div>
                 <div class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;">
                     <c:if test="#{controlador.Validador() == 1}">
