modificacion de fronter

--- a/web/Mantenimiento/Ocupacion.xhtml
+++ b/web/Mantenimiento/Ocupacion.xhtml
@@ -154,7 +154,7 @@
                   </div>
 
                   <p class="text-center">
-                    <b:commandButton class="btn btn-primary" value="Buscar" action="#{bean_ocupacion.insertar()}" />
+                    <b:commandButton class="btn btn-primary" value="Guardar" action="#{bean_ocupacion.insertar()}" />
                   </p> 
                 </h:form>
 
