--- a/web/Mantenimiento/Religion.xhtml
+++ b/web/Mantenimiento/Religion.xhtml
@@ -152,7 +152,7 @@
                   </div>
 
                   <p class="text-center">
-                    <b:commandButton class="btn btn-primary" value="Buscar" action="#{bean_religion.insertar()}" />
+                    <b:commandButton class="btn btn-primary" value="Guardar" action="#{bean_religion.insertar()}" />
                   </p> 
                 </h:form>
 
