--- a/web/Mantenimiento/Turno.xhtml
+++ b/web/Mantenimiento/Turno.xhtml
@@ -153,7 +153,7 @@
                     <b:inputText id="Descripcion" style=" font: bold small-caps 120%/200% serif;" placeholder="Salida: " value="#{bean_turno.turno.horarioSalida}"/>
                   </div>
                   <p class="text-center">
-                    <b:commandButton class="btn btn-primary" value="Buscar" action="#{bean_turno.insertar()}" />
+                    <b:commandButton class="btn btn-primary" value="Guardar" action="#{bean_turno.insertar()}" />
                   </p> 
                 </h:form>
 
