--- a/web/homes/homeDoctor.xhtml
+++ b/web/homes/homeDoctor.xhtml
@@ -5,7 +5,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
-        <title>Panel de Control</title>
+        <title>Panel de D</title>
         <!-- Esta pagina representa el panel de control principal de el administrador -->
 
         <meta charset="UTF-8"/>
