--- a/web/Administrador/Reportes.xhtml
+++ b/web/Administrador/Reportes.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Panel de Control</title>
+        <title>Reportes</title>
         <!-- Esta pagina representa el panel de control principal de el administrador -->
 
         <meta charset="UTF-8"/>
